--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/henryherzfeld/vanillajs/issues"
   },
-  "homepage": "https://github.com/henryherzfeld/vanillajs#readme"
+  "homepage": "https://github.com/henryherzfeld/vanillajs#readme",
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6"
+  }
 }
