--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/henryherzfeld/vanillajs#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
+    "popper.js": "^1.14.6",
+    "vanilla-router": "^1.2.7"
   }
 }
